Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1926

IGXMLScanner can fail to properly set its XSModel.

    XMLWordPrintableJSON

Details

    Description

      If an IGXMLScanner is used for a document with no schema and then reset to scan a document with a schema the model is not set correctly.

      Attachments

        1. xerces-model-update.patch
          0.4 kB
          John Keeping

        Activity

          People

            scantor Scott Cantor
            jkeeping John Keeping
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: