XERCESC-1926

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/branches/xerces-3.1@1662894 13f79535-47bb-0310-9956-ffa450edef68