src/xercesc/internal/IGXMLScanner2.cpp
@@ -1162,7 +1162,7 @@ void IGXMLScanner::scanReset(const InputSource& src)
     fSchemaInfoList->removeAll ();
 
     // fModel may need updating, as fGrammarResolver could have cleaned it
-    if(fModel && getPSVIHandler())
+    if(getPSVIHandler())
         fModel = fGrammarResolver->getXSModel();
 
     {
